--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -20,3 +20,4 @@ steps:
       echo "System.PullRequest.TargetBranch: $(System.PullRequest.TargetBranch)"
     displayName: 'echoing vars'
 
+# noop
