--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "./node_modules/.bin/mocha -r ts-node/register ./InvokeDestroy/test/*"
   },
   "dependencies": {
+    "azure-devops-node-api": "^10.1.1",
     "fp-ts": "^2.8.2"
   },
   "devDependencies": {
