--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "./node_modules/.bin/mocha -r ts-node/register ./InvokeDestroy/test/*"
   },
   "dependencies": {
-    "azure-devops-node-api": "^10.1.1",
-    "fp-ts": "^2.8.2"
+    "base-64": "^0.1.0",
+    "fp-ts": "^2.8.2",
+    "js-base64": "^3.4.5",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.0.2-beta2",
